Refactor vehicle search